<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cprogram"
    android:background="#FF8251FF">

    <TextView
        android:id="@+id/ctitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/opensansbold"
        android:paddingTop="20dp"
        android:text="@string/title_here"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="20sp" />
    <ScrollView
        android:id="@+id/ss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/ccode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="#fff"
            android:text="@string/code_here"
            android:textSize="15sp"/>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:fontFamily="@font/opensansbold"
            android:textSize="20sp"/>

          <TextView
                android:id="@+id/coutput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/output_here"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>