<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient8"
    tools:context=".credits">
<TextView
    android:id="@+id/credits"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:fontFamily="@font/opensansbold"
    android:textColor="#fff"
    android:layout_centerHorizontal="true"
    android:text="Credits"
    android:textSize="25sp"/>
    <TextView
        android:id="@+id/credit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensansbold"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:layout_below="@id/credits"
        android:layout_marginStart="20dp"
        android:text="-Thanks to Dr.J.Dhillipan and Dr.Agusthiyar for supporting us to design this application. "/>
    <TextView
        android:id="@+id/credit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensansbold"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:layout_below="@id/credit1"
        android:layout_marginStart="20dp"
        android:text="-Thanks to Mr.N Krishnamoorthy (Mentor) for giving us full freedom to work on our project."/>
    <TextView
        android:id="@+id/credit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensansbold"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:layout_below="@id/credit2"
        android:layout_marginStart="20dp"
        android:text="-Thanks to Umarani "/>
    <TextView
        android:id="@+id/credit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensansbold"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:layout_below="@id/credit3"
        android:layout_marginStart="20dp"
        android:text="-Thanks to all my friends for encourage me, love you all."/>
    <TextView
        android:id="@+id/creditn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensansbold"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:layout_below="@id/credit4"
        android:layout_marginStart="20dp"
        android:text="@string/freepix"/>
    <TextView
        android:id="@+id/creditn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensansbold"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:layout_below="@id/creditn"
        android:layout_marginStart="20dp"
        android:text="@string/freepix1"/>

    <TextView
        android:id="@+id/creditn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/creditn1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/freepix2"
        android:textColor="#fff" />

</RelativeLayout>